%%{init: {'theme':'base','themeVariables':{'fontFamily':'Arial','primaryColor':'#F7F3F2','primaryTextColor':'#171717','primaryBorderColor':'#B4232F','lineColor':'#5B6068','secondaryColor':'#F3F4F6','tertiaryColor':'#FFFFFF','clusterBkg':'#FFFFFF','clusterBorder':'#D1D5DB','actorBkg':'#FFFFFF','actorBorder':'#B4232F','actorTextColor':'#171717','signalColor':'#404040','signalTextColor':'#171717','noteBkgColor':'#FFF7ED','noteBorderColor':'#C2410C','noteTextColor':'#171717'}}}%%
classDiagram
    class Organization {+UUID id;+string slug}
    class User {+UUID id;+string email;+string role;+bool is_active}
    class Invite {+UUID id;+string role;+datetime expires_at}
    class Team {+UUID id;+string name;+string color}
    class TeamMember {+UUID id;+string role;+datetime joined_at}
    class OncallSchedule {+datetime starts_at;+datetime ends_at}
    class NotificationPrefs {+bool notify_assigned;+bool daily_digest;+int digest_hour}
    class ApiKey {+UUID id;+string name;+string key_hash}
    Organization "1" *-- "0..*" User
    Organization "1" *-- "0..*" Invite
    Organization "1" *-- "0..*" Team
    Organization "1" *-- "0..*" ApiKey
    Team "1" *-- "0..*" TeamMember
    User "1" -- "0..*" TeamMember
    Team "1" *-- "0..*" OncallSchedule
    User "1" -- "0..1" NotificationPrefs
